The "localURI" of a ResourceRef attribute was being set with an absolute, local path. Fixed this so that it is set with a path relative from the current file to the target location.
refs #4466